// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractActions should not show the dispute sliders when there is no dispute winner 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "gap": 12,
      "justifyContent": "flex-end",
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 24,
        "justifyContent": "center",
      }
    }
  >
    <EscrowButton
      style={
        {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
      tradeStatus="refundOrReviveRequired"
    />
    <ChatButton />
  </View>
  <ContractStatusInfo />
  <ContractButtons />
  <SellerSliders />
</View>
`;

exports[`ContractActions should show the "go to new trade" button when there is a new offer 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "gap": 12,
      "justifyContent": "flex-end",
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 24,
        "justifyContent": "center",
      }
    }
  >
    <EscrowButton
      disputeWinner="seller"
      style={
        {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
      tradeStatus="refundOrReviveRequired"
    />
    <ChatButton />
  </View>
  <ContractStatusInfo />
  <ContractButtons />
  <SellerSliders />
</View>
`;

exports[`ContractActions should show the dispute sliders when the contract is in the refundOrReviveRequired state 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "gap": 12,
      "justifyContent": "flex-end",
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 24,
        "justifyContent": "center",
      }
    }
  >
    <EscrowButton
      disputeWinner="seller"
      style={
        {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
      tradeStatus="refundOrReviveRequired"
    />
    <ChatButton />
  </View>
  <ContractStatusInfo />
  <ContractButtons />
  <SellerSliders />
</View>
`;

exports[`ContractActions should show the provide email button when the contract requires an email 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "gap": 12,
      "justifyContent": "flex-end",
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 24,
        "justifyContent": "center",
      }
    }
  >
    <EscrowButton
      isEmailRequired={true}
      style={
        {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    />
    <ChatButton />
  </View>
  <ContractStatusInfo />
  <ContractButtons />
  <SellerSliders />
</View>
`;
